# Smart-Lock-With-Face-Recognition

./: README.md
app_smart_lock/: README.md  pubspec.yaml
app_smart_lock/android/app/: build.gradle.kts
app_smart_lock/ios/Runner/: Info.plist
app_smart_lock/ios/Runner.xcodeproj/: project.pbxproj
app_smart_lock/lib/: main.dart
app_smart_lock/lib/screens/: adduser.dart  home_screen.dart  main_layout.dart  manageruser.dart  settingconnect.dart  warning_screen.dart
app_smart_lock/lib/services/: smart_lock_bluetooth_service.dart  smart_lock_cloud_service.dart  smart_lock_notification_service.dart
app_smart_lock/lib/widgets/: slide_to_unlock.dart
app_smart_lock/linux/: CMakeLists.txt
app_smart_lock/linux/runner/: my_application.cc
app_smart_lock/macos/Runner.xcodeproj/: project.pbxproj
app_smart_lock/macos/Runner/Configs/: AppInfo.xcconfig
app_smart_lock/web/: index.html  manifest.json
app_smart_lock/windows/: CMakeLists.txt
app_smart_lock/windows/runner/: Runner.rc  main.cpp
smart_lock_iot/: CMakeLists.txt  sdkconfig.defaults
smart_lock_iot/main/: CMakeLists.txt  idf_component.yml  main.cpp
smart_lock_server/: .dockerignore  .gitignore  Dockerfile  VAST_AI.md  docker-compose.yml  requirements.txt  sample_env.txt  test.ipynb  test_detector_and_chatgpt.ipynb
smart_lock_server/server/: main.py
smart_lock_server/server/ImageProcessing/: __init__.py  convert_helper.py  database_util.py  detector.py
smart_lock_server/server/api/: ChatGPT.py
smart_lock_server/server/tutorial/: tutorial.html
(+3 files in other folders)
